# Victortk-Solana-Q1-2023

./: README.md
capstone/plant-tree/: Anchor.toml  README.md  package-lock.json  package.json  r.json  recover.json  rf.json  rfmr.json  rfr.json  rt.json
capstone/plant-tree/app/: README.md  next.config.js  package-lock.json  package.json  tsconfig.json
capstone/plant-tree/app/app/: layout.tsx  page.tsx
capstone/plant-tree/app/public/: land.jpg:Zone.Identifier  plant.jpg:Zone.Identifier
capstone/plant-tree/app/public/programs/: farm.ts  farm_program.ts  farmer.ts  farmer_program.ts  fruit_market.ts  fruit_market_program.ts  tree.ts  tree_program.ts
capstone/plant-tree/app/public/scripts/: initializeFarm.js  pdas.tsx
capstone/plant-tree/app/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
capstone/plant-tree/dd/: starter.ts
capstone/plant-tree/programs/farm/: Cargo.toml
capstone/plant-tree/programs/farm/src/: lib.rs
capstone/plant-tree/programs/farm_program/: Cargo.toml
capstone/plant-tree/programs/farm_program/src/: lib.rs
capstone/plant-tree/programs/farmer/: Cargo.toml
capstone/plant-tree/programs/farmer/src/: lib.rs
capstone/plant-tree/programs/farmer_program/: Cargo.toml
capstone/plant-tree/programs/fruit_market/: Cargo.toml
capstone/plant-tree/programs/fruit_market/src/: lib.rs
capstone/plant-tree/programs/fruit_market_program/: Cargo.toml
capstone/plant-tree/programs/fruit_market_program/src/: lib.rs
capstone/plant-tree/programs/starter/: Cargo.toml
capstone/plant-tree/programs/tree/: Cargo.toml
capstone/plant-tree/programs/tree/src/: lib.rs
capstone/plant-tree/programs/tree_program/: Cargo.toml
capstone/plant-tree/starter/src/: lib.rs
capstone/plant-tree/tests/: farm.ts  farmer.ts  pdas.ts  starter.ts  tree.ts  zfruitMarket.ts
cluster1/code-challenges/escrow_program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
cluster1/code-journals/: journal.rs  journal2.rs  journal3.rs
cluster2/boilerplate/starter/: Anchor.toml
cluster2/code-journals/: journal1.md  journal2.md  journal3.md
cluster2/codechallenges/anchor_escrow/: Anchor.toml  package.json
cluster2/codechallenges/deposit/: Anchor.toml  package-lock.json  package.json
cluster2/codechallenges/deposit/programs/deposit/: Cargo.toml
cluster2/codechallenges/deposit/programs/deposit/src/: lib.rs  libb.rs
cluster2/codechallenges/deposit/tests/: deposit.ts
cluster2/codechallenges/program1/: Anchor.toml
cluster2/codechallenges/program1/tests/: program1.ts
cluster2/video/: video.md
cluster3/governance/: Anchor.toml
cluster3/governance/programs/governance/: Cargo.toml
cluster3/governance/tests/: governance.ts
cluster3/whitelist/: package-lock.json
cluster3/whitelist/programs/starter/: Cargo.toml
cluster3/whitelist/tests/: createKeypair.ts
prerequisite/rust/src/: arrays.rs  cli.rs  conditionals.rs  enums.rs  functions.rs  loops.rs  main.rs  pointers.rs  print.rs  strings.rs  structs.rs  tuples.rs  types.rs  vars.rs  vectors.rs
prerequisite/solana-escrow/solana-bpf-program-template/: Cargo.toml
prerequisite/solana-escrow/solana-bpf-program-template/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
(+79 files in other folders)
