[package]
name = "fruit_market"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fruit_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.27.0", features = ["init-if-needed"]}
spl-token =  "3.5.0"
anchor-spl = {version= "0.27.0", features=["metadata", "token", "dex"]}
solana-program = "=1.14.16"
farm = {path = "../farm", features = ["cpi"]}
tree = {path = "../tree", features = ["cpi"]}

