[package]
name = "fruit_market_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fruit_market_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.27.0", features = ["init-if-needed"]}
spl-token =  "3.5.0"
anchor-spl = {version= "0.27.0", features=["metadata", "token", "dex"]}
solana-program = "=1.14.16"
farm_program = {path = "../farm_program", features = ["cpi"]}
tree_program = {path = "../tree_program", features = ["cpi"]}

